# QIL-Research-Framework

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.githooks/: prepare-commit-msg
benches/: invariants.rs  quaternion_ops.rs
docs/: architecture.md  reproducibility.md
docs/submission_algorithmica_springer/: Two_Collapse_Mechanisms_for_Non_Commutative_Invariants_of_3_SAT.tex  sn-article.tex  sn-bibliography.bib
docs/submission_computational_complexity_springer/: Two_Collapse_Mechanisms_for_Non_Commutative_Invariants_of_3_SAT.tex  sn-bibliography.bib
docs/theory/: intrinsic_collapse.md  mathematical_foundations.md  quaternionic_incidence_model.md  tensor_model.md  terminal_abelianization.md
examples/: matrix_example.rs  reproduce_figures.rs  reproduce_table_1.rs  reproduce_table_2.rs  tensor_example.rs
experiments/: benchmark.rs  exact_validation.rs  random_instances.rs  stress_tests.rs
scripts/: commit-author-only.ps1
src/: lib.rs
src/algebra/: division_ring.rs  ideals.rs  mod.rs  quaternion.rs  reduced_norm.rs  trace.rs
src/collapse/: extrinsic.rs  intrinsic.rs  mod.rs  obstruction.rs
src/generators/: mod.rs  random_formula.rs  sat.rs  unsat.rs
src/invariants/: dieudonne.rs  mod.rs  quaternionic_trace.rs  spectral.rs  tensor_invariants.rs
src/io/: export.rs  mod.rs  parser.rs
src/models/: cnf.rs  contractions.rs  hypergraph_tensor.rs  incidence_matrix.rs  mod.rs
src/utils/: error.rs  mod.rs
tests/: collapse_mechanisms.rs  reproduce_manuscript.rs
